# ClaudeSwitch

./: .gitignore  CLAUDE.md  README.md  build.py  claudeswitch  claudeswitch.1  install.sh  pyproject.toml  requirements.txt
claudeswitch/: __init__.py  cli.py
tests/: test_cli.py
