[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claudeswitch"
version = "0.1.0"
description = "Manage Claude Code settings profiles across providers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Norman Anorman" }]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.0"]
test = ["coverage>=7.0", "pytest>=8.0"]

[project.scripts]
claudeswitch = "claudeswitch.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
